--- a/fastlane/metadata/es-ES/release_notes.txt
+++ b/fastlane/metadata/es-ES/release_notes.txt
@@ -1,2 +1,2 @@
-* Ahora admitimos fuentes de tamaño más grande en la pantalla de acceso.
-* Ahora las fechas de la pantalla Detalles del pedido están localizadas.
+* Buenas noticias para los hablantes de árabe, hebreo, persa y urdu: se ha mejorado la compatibilidad del Escritorio con los idiomas que se escriben de derecha a izquierda.
+* Más información con un solo toque: al tocar un producto de cualquier pedido, se mostrará una versión solo de lectura de los detalles del pedido.
