--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,2 +1,2 @@
-* ログイン画面が大きいフォントサイズに対応しました。
-* ご注文詳細画面の日付が現地時間に対応しました。
+* アラビア語、ヘブライ語、ペルシア語、ウルドゥー語への対応 :ダッシュボードの RTL 言語のサポートを改善しました。
+* タップによる詳細情報の表示 :注文の商品をタップすると商品の詳細が表示される専用の画面を追加しました。
