--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,2 +1,2 @@
-* 이제 로그인 화면에서 더 큰 글꼴 크기를 지원합니다.
-* 주문 상세 정보 화면의 날짜가 현지화되었습니다.
+* 아랍어, 히브리어, 페르시아어 및 우르두어 사용자를 위한 기쁜 소식: 알림판의 RTL 언어에 대한 지원이 개선되었습니다.
+* 한 번 탭으로 더 많은 정보 얻기 : 어떤 순서로든 제품을 탭하면 제품 세부 정보의 보기 전용 버전이 나타납니다.
