--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,2 @@
-* Увеличен размер шрифта на экране входа.
-* Локализованы даты на странице информации о заказе.
+* Хорошая новость для пользователей, говорящих на арабском языке, иврите, фарси и урду: мы улучшили поддержку RTL-языков на консоли.
+* Больше информации одним нажатием: теперь при нажатии на любой продукт в заказе открываются сведения о продукте.
