--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,2 +1,2 @@
-* 我们现在支持在登录屏幕上使用更大的字体。
-*“订单详细信息”屏幕上的日期现在已本地化。
+* 面向阿拉伯语者、希伯来语者、波斯语者和乌尔都语者的利好消息：控制面板中改进了对 RTL 语言的支持。
+* 轻点获取更多信息：轻点任意订单上的产品都会弹出一个只显示产品详细信息的视图版本。
