--- a/fastlane/metadata/default/release_notes.txt
+++ b/fastlane/metadata/default/release_notes.txt
@@ -1,2 +1,2 @@
-* We now support larger font sizes on the login screen.
-* Dates on the Order Details screen are now localized.
+* Arabic, Hebrew, Farsi, and Urdu speakers rejoice: there’s improved support for RTL languages in the Dashboard.
+* Get more info at a tap: Tapping on a product in any order will bring up a view-only version of the product details.
