--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,2 +1,2 @@
-* Ora supportiamo caratteri di dimensioni più grandi sulla schermata di accesso.
-* Le date sulla schermata Dettagli dell'ordine ora sono localizzate.
+* Chi parla arabo, ebraico, farsi e urdu ne sarà felice: il supporto per le lingue sinistroverse nella Bacheca è stato migliorato.
+* Ottieni più informazioni con un tocco: quando tocchi un prodotto in un qualsiasi ordine apparirà una versione di sola visualizzazione dei dettagli di quel prodotto.
