--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,2 +1,2 @@
-* 我們現在已於登入畫面中支援更大的字體了。
-* 訂單詳細資料畫面上的日期目前已完成本地化。
+* 阿拉伯文、希伯來文、波斯文和烏爾都文的使用者有福了：我們改善了儀表板中對 RTL 語言的支援。
+* 點選一下，即可取得更多資訊：點選任何訂單中的產品，即可開啟僅供檢視的產品詳細資訊。
