--- a/WooCommerce/Resources/AppStoreStrings.pot
+++ b/WooCommerce/Resources/AppStoreStrings.pot
@@ -47,10 +47,9 @@ msgctxt "app_store_promo_text"
 msgid "Run your store wherever you are. The WooCommerce app makes it easy to manage orders and inventory, track sales, and monitor store activity like new orders and reviews."
 msgstr ""
 
-msgctxt "v2.1-whats-new"
+msgctxt "v2.2-whats-new"
 msgid ""
-"* Arabic, Hebrew, Farsi, and Urdu speakers rejoice: there’s improved support for RTL languages in the Dashboard.\n"
-"* Get more info at a tap: Tapping on a product in any order will bring up a view-only version of the product details.\n"
+"Nothing huge here! Just some improvements and bug fixes — you won’t notice anything except a smooth-running app.\n"
 msgstr ""
 
 #. translators: This is a promo message that will be attached on top of a screenshot in the App Store.
