--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+2.3
+-----
+- Improvement: improved Dynamic Type support in the body of the notification in the Notifications tab.
+
 2.2
 -----
 - improvement: opting out of Tracks syncs with WordPress.com
