--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,2 +1,1 @@
-* 아랍어, 히브리어, 페르시아어 및 우르두어 사용자를 위한 기쁜 소식: 알림판의 RTL 언어에 대한 지원이 개선되었습니다.
-* 한 번 탭으로 더 많은 정보 얻기 : 어떤 순서로든 제품을 탭하면 제품 세부 정보의 보기 전용 버전이 나타납니다.
+큰 변경 사항은 없습니다! 몇 가지 개선 사항과 버그 수정을 적용했으므로, 앱이 더욱 원활하게 실행되는 것을 제외하고는 달라진 점이 없습니다.
