--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,1 @@
-* Хорошая новость для пользователей, говорящих на арабском языке, иврите, фарси и урду: мы улучшили поддержку RTL-языков на консоли.
-* Больше информации одним нажатием: теперь при нажатии на любой продукт в заказе открываются сведения о продукте.
+Ничего значительного! Просто исправлены ошибки и внесены небольшие улучшения — вы увидите только плавно работающее приложение.
