--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,2 +1,1 @@
-* 面向阿拉伯语者、希伯来语者、波斯语者和乌尔都语者的利好消息：控制面板中改进了对 RTL 语言的支持。
-* 轻点获取更多信息：轻点任意订单上的产品都会弹出一个只显示产品详细信息的视图版本。
+此处没有大的改动！只是做了一些改进并修复了几个问题，您会拥有一个运行流畅的应用程序，除此之外，别无其他。
