--- a/fastlane/metadata/en-US/release_notes.txt
+++ b/fastlane/metadata/en-US/release_notes.txt
@@ -1,2 +1,1 @@
-* Arabic, Hebrew, Farsi, and Urdu speakers rejoice: there’s improved support for RTL languages in the Dashboard.
-* Get more info at a tap: Tapping on a product in any order will bring up a view-only version of the product details.
+Nothing huge here! Just some improvements and bug fixes — you won’t notice anything except a smooth-running app.
