--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,2 +1,1 @@
-* Pour les utilisateurs des langues s'écrivant de droite à gauche (arabe, hébreu, farsi et ourdou) : amélioration de la prise en charge des langues dans le tableau de bord.
-* Obtenez davantage d'informations en un clic : dans une commande, appuyez sur un produit pour afficher une vue en lecture seule des détails le concernant.
+Rien de crucial ici ! Seulement quelques améliorations et résolutions de bugs : vous ne remarquerez rien si ce n'est une application plus fluide.
