--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-Burada çok önemli bir şey yok! Sadece bazı iyileştirmeler ve hata düzeltmeleri. Sorunsuz çalışan bir uygulamadan başka hiçbir şey görmeyeceksiniz.
+This version of the app does a better job adjust large font sizes for little phone screens — if you use iOS’s dynamic type settings, you won’t see any more comically large text.
