--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -149,7 +149,7 @@
 /* Shown while the app waits for the site creation process to complete. */
 "Completing Signup" = "Completing Signup";
 
-/* VoiceOver accessibility hint, informing the user that the row can be tapped and an email composer view will appear. */
+/* Accessibility hint, informing that a row can be tapped and an email composer view will appear. */
 "Composes a new email message to the billing customer." = "Composes a new email message to the billing customer.";
 
 /* VoiceOver accessibility hint, informing the user that the button can be used to create a new order note. */
@@ -178,6 +178,9 @@
 
 /* Copy address text button title — should be one word and as short as possible. */
 "Copy" = "Copy";
+
+/* Copy tracking number button title */
+"Copy Tracking Number" = "Copy Tracking Number";
 
 /* Message shown when site purchases API failed */
 "Could not check site purchases." = "Could not check site purchases.";
@@ -262,11 +265,17 @@
 /* WordPress.com Missing Token */
 "Dotcom Missing Token" = "Dotcom Missing Token";
 
+/* WordPress.com error thrown when the user has no permission to view site stats. */
+"Dotcom No Stats Permission" = "Dotcom No Stats Permission";
+
 /* WordPress.com Request Failure */
 "Dotcom Request Failed" = "Dotcom Request Failed";
 
 /* WordPress.com Error thrown when the response body is empty */
 "Dotcom Response Empty" = "Dotcom Response Empty";
+
+/* WordPress.com error thrown when the Jetpack site stats module is disabled. */
+"Dotcom Stats Module Disabled" = "Dotcom Stats Module Disabled";
 
 /* WordPress.com Invalid Token */
 "Dotcom Token Invalid" = "Dotcom Token Invalid";
@@ -498,8 +507,8 @@
 /* Title of a button.  */
 "Lost your password?" = "Lost your password?";
 
-/* Tagline after the heart icon, displayed to the user */
-"Made with love by Automattic" = "Made with love by Automattic";
+/* It reads 'Made with love by Automattic. We’re hiring!'. Place \'We’re hiring!' between `<a>` and `</a>` */
+"Made with love by Automattic. <a href=\"https://automattic.com/work-with-us/\">We’re hiring!</a>" = "Made with love by Automattic. <a href=\"https://automattic.com/work-with-us/\">We’re hiring!</a>";
 
 /* Login Prologue Legend */
 "Manage orders, track sales and monitor store activity with real-time alerts." = "Manage orders, track sales and monitor store activity with real-time alerts.";
@@ -662,7 +671,7 @@
    Order number title */
 "Order #\(viewModel.order.number)" = "Order #\(viewModel.order.number)";
 
-/* Displayed whenever the Details for an Order that just got deleted was onscreen. It reads: Order {order number} has been deleted from your store. */
+/* Displayed whenever an Order gets deleted. It reads: Order {order number} has been deleted from your store. */
 "Order %@ has been deleted from your store" = "Order %@ has been deleted from your store";
 
 /* Order fulfillment success notice */
@@ -696,6 +705,9 @@
 
 /* Payment section title */
 "Payment" = "Payment";
+
+/* Payment of <currency symbol><payment total> received via (payment method title) */
+"Payment of \(subject.totalValue) received via \(order.paymentMethodTitle)" = "Payment of \(subject.totalValue) received via \(order.paymentMethodTitle)";
 
 /* Payment of <currency symbol><payment total> received via (payment method title) */
 "Payment of \(totalValue) received via \(order.paymentMethodTitle)" = "Payment of \(totalValue) received via \(order.paymentMethodTitle)";
@@ -769,7 +781,7 @@
 /* Notice displayed when the onscreen product was just deleted. It reads: Product {product number} has been removed from your store. */
 "Product %ld has been removed from your store" = "Product %ld has been removed from your store";
 
-/* VoiceOver accessibility hint, informing the user that the row can be tapped to get to a prompt that lets them call or message the billing customer. */
+/* VoiceOver accessibility hint, informing the user that the row can be tapped to call or message the billing customer. */
 "Prompts with the option to call or message the billing customer." = "Prompts with the option to call or message the billing customer.";
 
 /* Add Custom shipping provider. Title of cell presenting the provider name */
@@ -1185,6 +1197,9 @@
 
 /* Shown when a user logs in with Google but it subsequently fails to work as login to WordPress.com */
 "Unable To Connect" = "Unable To Connect";
+
+/* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
+"Unable to delete tracking for order #\(order.orderID)" = "Unable to delete tracking for order #\(order.orderID)";
 
 /* Content of error presented when Delete Shipment Tracking Action Failed. It reads: Unable to delete tracking for order #{order number} */
 "Unable to delete tracking for order #\(orderID)" = "Unable to delete tracking for order #\(orderID)";
