--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,2 +1,3 @@
-- In Order Details > Shipment Tracking, a new action is added to the "more" action menu for copying tracking number.
-- Improved how stats work when your site doesn't have the Jetpack site stats module or you don't have permission to view stats. Now the UI is hidden instead of a generic, unhelpful error message.
+Copy tracking numbers! It is now easier to keep a watchful eye on your shipment without opening the app. In Order Details > Shipment Tracking > More, there is a new action to copy your tracking number to use wherever you want.
+
+Goodbye stats error message! If your site does not have the Jetpack site stats module, or you don’t have permission to view stats, you simply won’t see the stats page. You don’t need to see an annoying error message, so we have taken it away.
